--- a/install
+++ b/install
@@ -3,15 +3,14 @@
 set -e
 
 CONFIG="install.conf.yaml"
-DOTBOT_DIR="submodules/dotbot"
 
-DOTBOT_BIN="bin/dotbot"
 BASEDIR="$(cd "$(dirname "${BASH_SOURCE[0]}")" && pwd)"
-
 cd "${BASEDIR}"
-git -C "${DOTBOT_DIR}" submodule sync --quiet --recursive
-git submodule update --init --recursive "${DOTBOT_DIR}"
 
-"${BASEDIR}/${DOTBOT_DIR}/${DOTBOT_BIN}" -d "${BASEDIR}" -c "${CONFIG}" "${@}"
-# Alternatively, run
-# $HOME/dotfiles/scripts/run.sh dotbot -d $HOME/dotfiles -c install.conf.yaml
+if command -v python3 >/dev/null 2>&1; then
+    DOTBOT_DIR="submodules/dotbot"
+    DOTBOT_BIN="bin/dotbot"
+    python3 "${BASEDIR}/${DOTBOT_DIR}/${DOTBOT_BIN}" -d "${BASEDIR}" -c "${CONFIG}" "${@}"
+else
+    $HOME/dotfiles/scripts/run.sh uvx dotbot -d $HOME/dotfiles -c $CONFIG
+fi
