Do not define a variable for easier copy-paste command

--- a/install
+++ b/install
@@ -1,8 +1,5 @@
 #!/usr/bin/env bash
-
 set -e
-
-CONFIG="install.conf.yaml"
 
 BASEDIR="$(cd "$(dirname "${BASH_SOURCE[0]}")" && pwd)"
 cd "${BASEDIR}"
@@ -10,7 +7,7 @@ cd "${BASEDIR}"
 if command -v python3 >/dev/null 2>&1; then
     DOTBOT_DIR="submodules/dotbot"
     DOTBOT_BIN="bin/dotbot"
-    python3 "${BASEDIR}/${DOTBOT_DIR}/${DOTBOT_BIN}" -d "${BASEDIR}" -c "${CONFIG}" "${@}"
+    python3 "${BASEDIR}/${DOTBOT_DIR}/${DOTBOT_BIN}" -d "${BASEDIR}" -c "install.conf.yaml" "${@}"
 else
-    $HOME/dotfiles/scripts/run.sh uvx dotbot -d $HOME/dotfiles -c $CONFIG
+    $HOME/dotfiles/scripts/run.sh uvx dotbot -d $HOME/dotfiles -c install.conf.yaml
 fi
